computer keyboard plays midi

--- a/src/View/ControlMatrixScene.ui
+++ b/src/View/ControlMatrixScene.ui
@@ -1225,12 +1225,12 @@
   <customwidget>
    <class>DialKnob</class>
    <extends>QDial</extends>
-   <header>UiControlers.h</header>
+   <header>UiWidgets.h</header>
   </customwidget>
   <customwidget>
    <class>ComboPicker</class>
    <extends>QComboBox</extends>
-   <header>UiControlers.h</header>
+   <header>UiWidgets.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
