--- a/src/View/ArpSeq.ui
+++ b/src/View/ArpSeq.ui
@@ -3671,12 +3671,12 @@
   <customwidget>
    <class>DialKnob</class>
    <extends>QDial</extends>
-   <header>UiControlers.h</header>
+   <header>UiWidgets.h</header>
   </customwidget>
   <customwidget>
    <class>ComboPicker</class>
    <extends>QComboBox</extends>
-   <header>UiControlers.h</header>
+   <header>UiWidgets.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
