implemented piano roll

--- a/src/View/QAN1xEditor.ui
+++ b/src/View/QAN1xEditor.ui
@@ -6,15 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1350</width>
-    <height>944</height>
+    <width>1172</width>
+    <height>957</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>869</width>
+    <height>0</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>QAN1xEditor</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QHBoxLayout" name="horizontalLayout_4">
+   <layout class="QVBoxLayout" name="verticalLayout_4">
     <item>
      <widget class="QScrollArea" name="scrollArea_5">
       <property name="frameShape">
@@ -31,26 +37,11 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>1332</width>
-         <height>905</height>
+         <width>1154</width>
+         <height>918</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
-        <property name="spacing">
-         <number>0</number>
-        </property>
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
-         <number>0</number>
-        </property>
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
@@ -100,7 +91,7 @@
              <enum>Qt::Horizontal</enum>
             </property>
             <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
+             <enum>QSizePolicy::MinimumExpanding</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
@@ -123,19 +114,6 @@
              <string>Request Voice</string>
             </property>
            </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
           </item>
          </layout>
         </item>
@@ -445,7 +423,7 @@
            <property name="geometry">
             <rect>
              <x>340</x>
-             <y>80</y>
+             <y>110</y>
              <width>71</width>
              <height>21</height>
             </rect>
@@ -476,7 +454,7 @@
            <property name="geometry">
             <rect>
              <x>270</x>
-             <y>80</y>
+             <y>110</y>
              <width>61</width>
              <height>22</height>
             </rect>
@@ -691,9 +669,9 @@
            <property name="geometry">
             <rect>
              <x>510</x>
-             <y>30</y>
-             <width>581</width>
-             <height>151</height>
+             <y>20</y>
+             <width>301</width>
+             <height>161</height>
             </rect>
            </property>
            <property name="title">
@@ -950,7 +928,7 @@
            <property name="geometry">
             <rect>
              <x>270</x>
-             <y>110</y>
+             <y>80</y>
              <width>61</width>
              <height>22</height>
             </rect>
@@ -969,7 +947,7 @@
            <property name="geometry">
             <rect>
              <x>340</x>
-             <y>110</y>
+             <y>80</y>
              <width>71</width>
              <height>21</height>
             </rect>
@@ -1062,7 +1040,7 @@
                    </size>
                   </property>
                   <property name="title">
-                   <string>Scene 1</string>
+                   <string>Scene 2</string>
                   </property>
                   <widget class="ControlMatrixScene" name="ctrlMatrixScene2" native="true">
                    <property name="geometry">
@@ -1355,14 +1333,96 @@
          </layout>
         </item>
         <item>
-         <widget class="QMidiPianoRoll" name="graphicsView">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
+         <layout class="QHBoxLayout" name="horizontalLayout_6">
+          <property name="bottomMargin">
+           <number>0</number>
           </property>
-         </widget>
+          <item>
+           <widget class="QCheckBox" name="enablePcKbd">
+            <property name="text">
+             <string>PC keyboard as MIDI</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="label_14">
+            <property name="text">
+             <string>Octave:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QSpinBox" name="pcKbdOctave">
+            <property name="minimumSize">
+             <size>
+              <width>40</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="minimum">
+             <number>-2</number>
+            </property>
+            <property name="maximum">
+             <number>8</number>
+            </property>
+            <property name="value">
+             <number>3</number>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <item>
+           <widget class="PianoView" name="pianoView">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>1128</width>
+              <height>53</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>1128</width>
+              <height>53</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_4">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -1424,9 +1484,9 @@
    <header>UiWidgets.h</header>
   </customwidget>
   <customwidget>
-   <class>QMidiPianoRoll</class>
+   <class>PianoView</class>
    <extends>QGraphicsView</extends>
-   <header location="global">qmidipianoroll.h</header>
+   <header>PianoRoll/pianoview.h</header>
   </customwidget>
  </customwidgets>
  <resources>
