--- a/src/View/FreeEGWidget.ui
+++ b/src/View/FreeEGWidget.ui
@@ -287,7 +287,7 @@
   <widget class="QLabel" name="label_9">
    <property name="geometry">
     <rect>
-     <x>610</x>
+     <x>710</x>
      <y>280</y>
      <width>51</width>
      <height>21</height>
@@ -300,7 +300,7 @@
   <widget class="ComboPicker" name="loopCombo">
    <property name="geometry">
     <rect>
-     <x>450</x>
+     <x>520</x>
      <y>280</y>
      <width>111</width>
      <height>22</height>
@@ -338,9 +338,9 @@
   <widget class="ComboPicker" name="triggerCombo">
    <property name="geometry">
     <rect>
-     <x>660</x>
+     <x>760</x>
      <y>280</y>
-     <width>111</width>
+     <width>121</width>
      <height>22</height>
     </rect>
    </property>
@@ -354,7 +354,7 @@
    </item>
    <item>
     <property name="text">
-     <string>Kbd+Midi</string>
+     <string>Keyboard + Midi</string>
     </property>
    </item>
    <item>
@@ -366,7 +366,7 @@
   <widget class="QLabel" name="label_10">
    <property name="geometry">
     <rect>
-     <x>410</x>
+     <x>480</x>
      <y>280</y>
      <width>41</width>
      <height>21</height>
@@ -464,7 +464,7 @@
   <widget class="QLabel" name="label_43">
    <property name="geometry">
     <rect>
-     <x>810</x>
+     <x>930</x>
      <y>280</y>
      <width>71</width>
      <height>21</height>
@@ -483,7 +483,7 @@
   <widget class="DialKnob" name="keyTrack">
    <property name="geometry">
     <rect>
-     <x>880</x>
+     <x>1000</x>
      <y>270</y>
      <width>31</width>
      <height>41</height>
@@ -525,7 +525,7 @@
     <rect>
      <x>120</x>
      <y>280</y>
-     <width>69</width>
+     <width>81</width>
      <height>22</height>
     </rect>
    </property>
@@ -566,9 +566,9 @@
   <widget class="ComboPicker" name="lengthCombo">
    <property name="geometry">
     <rect>
-     <x>280</x>
+     <x>300</x>
      <y>280</y>
-     <width>91</width>
+     <width>111</width>
      <height>22</height>
     </rect>
    </property>
@@ -579,7 +579,7 @@
   <widget class="QLabel" name="label_12">
    <property name="geometry">
     <rect>
-     <x>230</x>
+     <x>250</x>
      <y>280</y>
      <width>49</width>
      <height>21</height>
