--- a/src/View/FreeEGWidget.ui
+++ b/src/View/FreeEGWidget.ui
@@ -24,12 +24,12 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>1161</width>
-     <height>261</height>
+     <width>1155</width>
+     <height>259</height>
     </rect>
    </property>
   </widget>
-  <widget class="QGroupBox" name="groupBox_5">
+  <widget class="QGroupBox" name="groupTrack_1">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -114,7 +114,7 @@
     </property>
    </widget>
   </widget>
-  <widget class="QGroupBox" name="groupBox_6">
+  <widget class="QGroupBox" name="groupTrack_2">
    <property name="geometry">
     <rect>
      <x>240</x>
@@ -199,7 +199,7 @@
     </item>
    </widget>
   </widget>
-  <widget class="QGroupBox" name="groupBox_8">
+  <widget class="QGroupBox" name="groupTrack_4">
    <property name="geometry">
     <rect>
      <x>700</x>
@@ -376,7 +376,7 @@
     <string>Loop:</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="groupBox_7">
+  <widget class="QGroupBox" name="groupTrack_3">
    <property name="geometry">
     <rect>
      <x>470</x>
